# AP-knowledge

./: README.md  manage.py  pyproject.toml  requirements.txt
AP_knowledge/: settings.py  urls.py  wsgi.py
feedback/: admin.py  forms.py  models.py  views.py
feedback/migrations/: 0001_initial.py
knowledge/: admin.py  apps.py  forms.py  models.py  translation.py  views.py
knowledge/management/commands/: cleanup_media.py  export_docs.py  export_docusaurus.py
knowledge/migrations/: 0001_initial.py  0002_alter_article_language.py
static/css/: admin_fix.css
templates/: base.html  faq_list.html  feedback_page.html
templates/admin/: index.html
templates/knowledge/: detail.html  index.html  search.html
