[project]
name = "ap-knowledge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.10",
    "django-mdeditor>=0.1.20",
    "django-mptt>=0.18.0",
    "django-simple-captcha>=0.6.3",
    "django-taggit>=6.1.0",
    "markdown>=3.10.1",
    "pillow>=12.1.0",
]
