[project]
name = "ap-knowledge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.10",
    "django-imagekit>=6.0.0",
    "django-mdeditor>=0.1.20",
    "django-modeltranslation>=0.19.19",
    "django-mptt>=0.18.0",
    "django-simple-captcha>=0.6.3",
    "django-taggit>=6.1.0",
    "imagekit",
    "markdown>=3.10.1",
    "martor>=1.7.16",
    "pillow>=12.1.0",
]
